--- a/workflows/analysis/risk_pred.ipynb
+++ b/workflows/analysis/risk_pred.ipynb
@@ -107,9 +107,92 @@
    "metadata": {},
    "source": [
     "## Ordinal analysis\n",
-    "Let's convert the target variable to ordinal. Then we can create a confusion matrix and extract the cumulative metrics. Then we extract the cumulative precision across ordinal classes.\n",
+    "Let's convert the target variable to ordinal. Then we can create a confusion matrix and extract the cumulative metrics. Then we extract the cumulative precision across ordinal classes."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Classification by Logistic Regression\n",
     "\n",
-    "We can also try to fit an ordinal logistic regression model."
+    "Here we import the data and plot to see whether logistic regression is appropriate for the analysis. We do this with continuous variables."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from sklearn.model_selection import StratifiedShuffleSplit as strat\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "# Read the data into the script\n",
+    "df = pd.read_csv('A3_Q1_data.csv')\n",
+    "\n",
+    "# Convert df to numpy array\n",
+    "data = df.values\n",
+    "\n",
+    "# Extract features and labels\n",
+    "X = data[:, :-1]  # Features x_1 and x_2\n",
+    "y = data[:, -1]   # Labels y\n",
+    "\n",
+    "# Create stratified split\n",
+    "split = strat(n_splits=1, test_size=0.3, random_state=42)\n",
+    "\n",
+    "# Perform the split\n",
+    "for train_index, test_index in split.split(X, y):\n",
+    "    X_train, X_test = X[train_index], X[test_index]\n",
+    "    y_train, y_test = y[train_index], y[test_index]\n",
+    "\n",
+    "# See the split outcome for confirmation\n",
+    "print(\"X_train shape:\", X_train.shape)\n",
+    "print(\"X_test shape:\", X_test.shape)\n",
+    "print(\"y_train shape:\", y_train.shape)\n",
+    "print(\"y_test shape:\", y_test.shape)\n",
+    "\n",
+    "# Plot the training data by class\n",
+    "plt.scatter(X_train[y_train == 0, 0], X_train[y_train == 0, 1], color='orchid', label='Class 0')\n",
+    "plt.scatter(X_train[y_train == 1, 0], X_train[y_train == 1, 1], color='steelblue', label='Class 1')\n",
+    "\n",
+    "plt.xlabel('Feature x_1')\n",
+    "plt.ylabel('Feature x_2')\n",
+    "plt.title('Training Data by Class')\n",
+    "plt.legend()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Calculations for x_1\n",
+    "x1_mean = np.mean(X_train[:, 0])\n",
+    "x1_std = np.std(X_train[:, 0])\n",
+    "x1_range = np.ptp(X_train[:, 0])\n",
+    "\n",
+    "# Calculations for x_2\n",
+    "x2_mean = np.mean(X_train[:, 1])\n",
+    "x2_std = np.std(X_train[:, 1])\n",
+    "x2_range = np.ptp(X_train[:, 1])\n",
+    "\n",
+    "# Print the results\n",
+    "print(\"Feature x_1:\")\n",
+    "print(f\"Mean: {x1_mean: .4f}, Standard Deviation: {x1_std: .4f}, Range: {x1_range: .4f}\")\n",
+    "print(\"\\nFeature x_2:\")\n",
+    "print(f\"Mean: {x2_mean: .4f}, Standard Deviation: {x2_std: .4f}, Range: {x2_range: .4f}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If logistic regression is appropriate for this analysis, refer to  assignment 3 for fitting, gradient descent, AUC and precision-recall."
    ]
   }
  ],
