--- a/workflows/data_prep/raster_prep.ipynb
+++ b/workflows/data_prep/raster_prep.ipynb
@@ -518,7 +518,192 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Step 4: Clip SILVIS WUI to county boundary\n",
+    "## Step 6: Align CRS\n",
+    "We need to align all the rasters and geoms to a common CRS and then make sure that they work in GIS workspaces like QGIS and ArcGIS Pro. The CRS we are going to use is EPSG:26913. Ouray County uses EPSG:2233 for their public GIS data, but that CRS is in feet. EPSG:26913 is the same projection, but the units are in meters. \n",
+    "\n",
+    "I have already projected the county boundary and the county parcels to EPSG:26913, so now we are going to try projecting one of the rasters to that CRS. Maybe it will be easier to load the raster into QGIS or ArcGIS Pro and do the projection there. We will see!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PROJCS[\"NAD83 / UTM zone 13N\",GEOGCS[\"NAD83\",DATUM[\"North American Datum 1983\",SPHEROID[\"GRS 1980\",6378137,298.257222101]],PRIMEM[\"Greenwich\",0],UNIT[\"degree\",0.0174532925199433],AUTHORITY[\"EPSG\",\"4269\"]],PROJECTION[\"Transverse_Mercator\"],PARAMETER[\"latitude_of_origin\",0],PARAMETER[\"central_meridian\",-105],PARAMETER[\"scale_factor\",0.9996],PARAMETER[\"false_easting\",500000],PARAMETER[\"false_northing\",0],UNIT[\"metre\",1],AXIS[\"Easting\",EAST],AXIS[\"Northing\",NORTH],AUTHORITY[\"EPSG\",\"26913\"]]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>OBJECTID</th>\n",
+       "      <th>COUNTY</th>\n",
+       "      <th>FULL</th>\n",
+       "      <th>LABEL</th>\n",
+       "      <th>CNTY_FIPS</th>\n",
+       "      <th>NUM_FIPS</th>\n",
+       "      <th>CENT_LAT</th>\n",
+       "      <th>CENT_LONG</th>\n",
+       "      <th>US_FIPS</th>\n",
+       "      <th>geometry</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>33</td>\n",
+       "      <td>OURAY</td>\n",
+       "      <td>Ouray County</td>\n",
+       "      <td>Ouray</td>\n",
+       "      <td>091</td>\n",
+       "      <td>91</td>\n",
+       "      <td>38.155497</td>\n",
+       "      <td>-107.769317</td>\n",
+       "      <td>08091</td>\n",
+       "      <td>POLYGON ((241274.651 4235076.455, 241192.616 4...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   OBJECTID COUNTY          FULL  LABEL CNTY_FIPS  NUM_FIPS   CENT_LAT  \\\n",
+       "0        33  OURAY  Ouray County  Ouray       091        91  38.155497   \n",
+       "\n",
+       "    CENT_LONG US_FIPS                                           geometry  \n",
+       "0 -107.769317   08091  POLYGON ((241274.651 4235076.455, 241192.616 4...  "
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Grab CRS from county boundary - save as target_crs for raster reprojection\n",
+    "import geopandas as gpd\n",
+    "county = gpd.read_file('../data/county_geoms/county_26913.gpkg')\n",
+    "target_crs = county.crs\n",
+    "county.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Projected CRS: EPSG:26913>\n",
+       "Name: NAD83 / UTM zone 13N\n",
+       "Axis Info [cartesian]:\n",
+       "- [east]: Easting (metre)\n",
+       "- [north]: Northing (metre)\n",
+       "Area of Use:\n",
+       "- undefined\n",
+       "Coordinate Operation:\n",
+       "- name: UTM zone 13N\n",
+       "- method: Transverse Mercator\n",
+       "Datum: North American Datum 1983\n",
+       "- Ellipsoid: GRS 1980\n",
+       "- Prime Meridian: Greenwich"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "target_crs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Import a test raster and get the info from it\n",
+    "import rasterio as rio\n",
+    "\n",
+    "with rio.open('../data/tiffs_from_las/ouray_pointDensity.tif') as src:\n",
+    "    raster = src.read(1)\n",
+    "    src_crs = src.crs\n",
+    "    src_transform = src.transform"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "CRSError",
+     "evalue": "Cannot find coordinate operations from 'ENGCRS[\"NAD83(2011) / UTM zone 13N + NAVD88 height - US Geoid Model of 2018\",EDATUM[\"\"],CS[Cartesian,2],AXIS[\"easting\",east,ORDER[1],LENGTHUNIT[\"metre\",1,ID[\"EPSG\",9001]]],AXIS[\"northing\",north,ORDER[2],LENGTHUNIT[\"metre\",1,ID[\"EPSG\",9001]]]]' to 'PROJCRS[\"NAD83 / UTM zone 13N\",BASEGEOGCRS[\"NAD83\",DATUM[\"North American Datum 1983\",ELLIPSOID[\"GRS 1980\",6378137,298.257222101,LENGTHUNIT[\"metre\",1]]],PRIMEM[\"Greenwich\",0,ANGLEUNIT[\"degree\",0.0174532925199433]],ID[\"EPSG\",4269]],CONVERSION[\"UTM zone 13N\",METHOD[\"Transverse Mercator\",ID[\"EPSG\",9807]],PARAMETER[\"Latitude of natural origin\",0,ANGLEUNIT[\"degree\",0.0174532925199433],ID[\"EPSG\",8801]],PARAMETER[\"Longitude of natural origin\",-105,ANGLEUNIT[\"degree\",0.0174532925199433],ID[\"EPSG\",8802]],PARAMETER[\"Scale factor at natural origin\",0.9996,SCALEUNIT[\"unity\",1],ID[\"EPSG\",8805]],PARAMETER[\"False easting\",500000,LENGTHUNIT[\"metre\",1],ID[\"EPSG\",8806]],PARAMETER[\"False northing\",0,LENGTHUNIT[\"metre\",1],ID[\"EPSG\",8807]]],CS[Cartesian,2],AXIS[\"easting\",east,ORDER[1],LENGTHUNIT[\"metre\",1]],AXIS[\"northing\",north,ORDER[2],LENGTHUNIT[\"metre\",1]],ID[\"EPSG\",26913]]'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mCPLE_NotSupportedError\u001b[0m                    Traceback (most recent call last)",
+      "File \u001b[1;32mrasterio\\\\_warp.pyx:691\u001b[0m, in \u001b[0;36mrasterio._warp._calculate_default_transform\u001b[1;34m()\u001b[0m\n",
+      "File \u001b[1;32mrasterio\\\\_err.pyx:221\u001b[0m, in \u001b[0;36mrasterio._err.exc_wrap_pointer\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;31mCPLE_NotSupportedError\u001b[0m: Cannot find coordinate operations from 'ENGCRS[\"NAD83(2011) / UTM zone 13N + NAVD88 height - US Geoid Model of 2018\",EDATUM[\"\"],CS[Cartesian,2],AXIS[\"easting\",east,ORDER[1],LENGTHUNIT[\"metre\",1,ID[\"EPSG\",9001]]],AXIS[\"northing\",north,ORDER[2],LENGTHUNIT[\"metre\",1,ID[\"EPSG\",9001]]]]' to 'PROJCRS[\"NAD83 / UTM zone 13N\",BASEGEOGCRS[\"NAD83\",DATUM[\"North American Datum 1983\",ELLIPSOID[\"GRS 1980\",6378137,298.257222101,LENGTHUNIT[\"metre\",1]]],PRIMEM[\"Greenwich\",0,ANGLEUNIT[\"degree\",0.0174532925199433]],ID[\"EPSG\",4269]],CONVERSION[\"UTM zone 13N\",METHOD[\"Transverse Mercator\",ID[\"EPSG\",9807]],PARAMETER[\"Latitude of natural origin\",0,ANGLEUNIT[\"degree\",0.0174532925199433],ID[\"EPSG\",8801]],PARAMETER[\"Longitude of natural origin\",-105,ANGLEUNIT[\"degree\",0.0174532925199433],ID[\"EPSG\",8802]],PARAMETER[\"Scale factor at natural origin\",0.9996,SCALEUNIT[\"unity\",1],ID[\"EPSG\",8805]],PARAMETER[\"False easting\",500000,LENGTHUNIT[\"metre\",1],ID[\"EPSG\",8806]],PARAMETER[\"False northing\",0,LENGTHUNIT[\"metre\",1],ID[\"EPSG\",8807]]],CS[Cartesian,2],AXIS[\"easting\",east,ORDER[1],LENGTHUNIT[\"metre\",1]],AXIS[\"northing\",north,ORDER[2],LENGTHUNIT[\"metre\",1]],ID[\"EPSG\",26913]]'",
+      "\nDuring handling of the above exception, another exception occurred:\n",
+      "\u001b[1;31mCRSError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[11], line 5\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mrasterio\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mwarp\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m reproject, Resampling\n\u001b[0;32m      4\u001b[0m \u001b[38;5;66;03m# Define the target transform and shape\u001b[39;00m\n\u001b[1;32m----> 5\u001b[0m transform, width, height \u001b[38;5;241m=\u001b[39m rio\u001b[38;5;241m.\u001b[39mwarp\u001b[38;5;241m.\u001b[39mcalculate_default_transform(\n\u001b[0;32m      6\u001b[0m     src_crs, target_crs, raster\u001b[38;5;241m.\u001b[39mshape[\u001b[38;5;241m1\u001b[39m], raster\u001b[38;5;241m.\u001b[39mshape[\u001b[38;5;241m0\u001b[39m], \u001b[38;5;241m*\u001b[39msrc\u001b[38;5;241m.\u001b[39mbounds)\n\u001b[0;32m      8\u001b[0m \u001b[38;5;66;03m# Create an empty array for the reprojected raster\u001b[39;00m\n\u001b[0;32m      9\u001b[0m reprojected_raster \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mempty((height, width), dtype\u001b[38;5;241m=\u001b[39mnp\u001b[38;5;241m.\u001b[39mfloat32)\n",
+      "File \u001b[1;32mc:\\Users\\by197116\\AppData\\Local\\anaconda3\\Lib\\site-packages\\rasterio\\env.py:401\u001b[0m, in \u001b[0;36mensure_env.<locals>.wrapper\u001b[1;34m(*args, **kwds)\u001b[0m\n\u001b[0;32m    399\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m    400\u001b[0m     \u001b[38;5;28;01mwith\u001b[39;00m Env\u001b[38;5;241m.\u001b[39mfrom_defaults():\n\u001b[1;32m--> 401\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m f(\u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwds)\n",
+      "File \u001b[1;32mc:\\Users\\by197116\\AppData\\Local\\anaconda3\\Lib\\site-packages\\rasterio\\warp.py:486\u001b[0m, in \u001b[0;36mcalculate_default_transform\u001b[1;34m(src_crs, dst_crs, width, height, left, bottom, right, top, gcps, rpcs, resolution, dst_width, dst_height, **kwargs)\u001b[0m\n\u001b[0;32m    483\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m resolution \u001b[38;5;129;01mand\u001b[39;00m dimensions:\n\u001b[0;32m    484\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mResolution cannot be used with dst_width and dst_height.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m--> 486\u001b[0m dst_affine, dst_width, dst_height \u001b[38;5;241m=\u001b[39m _calculate_default_transform(\n\u001b[0;32m    487\u001b[0m     src_crs, dst_crs, width, height, left, bottom, right, top, gcps, rpcs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs\n\u001b[0;32m    488\u001b[0m )\n\u001b[0;32m    490\u001b[0m \u001b[38;5;66;03m# If resolution is specified, Keep upper-left anchored\u001b[39;00m\n\u001b[0;32m    491\u001b[0m \u001b[38;5;66;03m# adjust the transform resolutions\u001b[39;00m\n\u001b[0;32m    492\u001b[0m \u001b[38;5;66;03m# adjust the width/height by the ratio of estimated:specified res (ceil'd)\u001b[39;00m\n\u001b[0;32m    493\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m resolution:\n\u001b[0;32m    494\u001b[0m     \u001b[38;5;66;03m# resolutions argument into tuple\u001b[39;00m\n",
+      "File \u001b[1;32mrasterio\\\\_warp.pyx:712\u001b[0m, in \u001b[0;36mrasterio._warp._calculate_default_transform\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;31mCRSError\u001b[0m: Cannot find coordinate operations from 'ENGCRS[\"NAD83(2011) / UTM zone 13N + NAVD88 height - US Geoid Model of 2018\",EDATUM[\"\"],CS[Cartesian,2],AXIS[\"easting\",east,ORDER[1],LENGTHUNIT[\"metre\",1,ID[\"EPSG\",9001]]],AXIS[\"northing\",north,ORDER[2],LENGTHUNIT[\"metre\",1,ID[\"EPSG\",9001]]]]' to 'PROJCRS[\"NAD83 / UTM zone 13N\",BASEGEOGCRS[\"NAD83\",DATUM[\"North American Datum 1983\",ELLIPSOID[\"GRS 1980\",6378137,298.257222101,LENGTHUNIT[\"metre\",1]]],PRIMEM[\"Greenwich\",0,ANGLEUNIT[\"degree\",0.0174532925199433]],ID[\"EPSG\",4269]],CONVERSION[\"UTM zone 13N\",METHOD[\"Transverse Mercator\",ID[\"EPSG\",9807]],PARAMETER[\"Latitude of natural origin\",0,ANGLEUNIT[\"degree\",0.0174532925199433],ID[\"EPSG\",8801]],PARAMETER[\"Longitude of natural origin\",-105,ANGLEUNIT[\"degree\",0.0174532925199433],ID[\"EPSG\",8802]],PARAMETER[\"Scale factor at natural origin\",0.9996,SCALEUNIT[\"unity\",1],ID[\"EPSG\",8805]],PARAMETER[\"False easting\",500000,LENGTHUNIT[\"metre\",1],ID[\"EPSG\",8806]],PARAMETER[\"False northing\",0,LENGTHUNIT[\"metre\",1],ID[\"EPSG\",8807]]],CS[Cartesian,2],AXIS[\"easting\",east,ORDER[1],LENGTHUNIT[\"metre\",1]],AXIS[\"northing\",north,ORDER[2],LENGTHUNIT[\"metre\",1]],ID[\"EPSG\",26913]]'"
+     ]
+    }
+   ],
+   "source": [
+    "# Reproject the raster\n",
+    "from rasterio.warp import reproject, Resampling\n",
+    "\n",
+    "# Define the target transform and shape\n",
+    "transform, width, height = rio.warp.calculate_default_transform(\n",
+    "    src_crs, target_crs, raster.shape[1], raster.shape[0], *src.bounds)\n",
+    "\n",
+    "# Create an empty array for the reprojected raster\n",
+    "reprojected_raster = np.empty((height, width), dtype=np.float32)\n",
+    "\n",
+    "# Reproject the raster\n",
+    "reproject(\n",
+    "    raster, reprojected_raster,\n",
+    "    src_transform=src_transform, src_crs=src_crs,\n",
+    "    dst_transform=transform, dst_crs=target_crs,\n",
+    "    resampling=Resampling.nearest)  # Nearest neighbor resampling will work fine for this but can be changed\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Step 5: Clip SILVIS WUI to county boundary\n",
     "\n",
     "Note here that the county boundary does not cover the entire county. It is clipped in the south and the west. That's because this represents the extent of the LiDAR data. We are missing out on a few building footprints in the northwest of the county, but we're just going to have to deal with that and do better on the next county. \n",
     "\n",
@@ -530,7 +715,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
